--- a/fromscratch.html
+++ b/fromscratch.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tyler Scott From Scratch Page</title>
-    <link rel="stylesheet" href="../HTML Project/css/fromscratchstyles.css">
+    <link rel="stylesheet" href="css/fromscratchstyles.css">
 </head>
 <body>
     <h1>Here is my from scratch page, it isn't the most pretty but gets the job done!</h1>
